# prsktools

./: LICENSE  README.md  achievement_log.txt  achievements.json  config.toml  pyproject.toml  ribbon.ipynb  song_info.json  songs.csv  total_achievements.txt  めも
.github/workflows/: nextjs.yml
frontend/: next.config.mjs  package-lock.json  package.json
frontend/public/: achievements.json  song_info.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: Chart.tsx  DataTable.tsx
frontend/src/types/: data.ts
frontend/src/utils/: dataMapper.ts
prsktools/: achievement_manager.py  config.py  constants.py  data_loader.py  file.py  manual_input.py  ocr_input.py  plot.py  scrape.py  screenshot.py  song_util.py  めも
